# mtg_leaderboard

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PWA_CACHE_CLEAR.md  PWA_IMPLEMENTATION.md  PWA_OFFLINE_TESTING_GUIDE.md  PWA_TESTING_GUIDE.md  README.md  deploy.sh  docker-compose.yml  start-dev.sh
.claude/commands/: bump_deploy.md  deploy.md  start.md  sync-prod-db.md
.serena/: project.yml
backend/: .env.example  .python-version  Dockerfile  make_superuser.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  analytics.py  event.py  match.py  player.py  pod.py
backend/app/routers/: analytics.py  auth.py  decks.py  events.py  leaderboard.py  matches.py  players.py  pod_dynamics.py  pods.py  scryfall.py
backend/app/services/: elo_calculator.py  elo_service.py  scryfall.py
backend/app/utils/: color_identity.py  jwt.py
backend/scripts/: backfill_elo.py  migrate_pods.py  seed_sample_data.py  update_deck_images.py
docs/plans/: 2026-02-14-draft-events-design.md  2026-02-14-draft-events-implementation.md  2026-02-14-event-match-tracker-fixes-design.md  2026-02-14-event-match-tracker-fixes.md  2026-02-14-tournament-events-design.md  2026-02-14-tournament-events-implementation.md  2026-02-14-tv-live-view-enhancements-design.md  2026-02-14-tv-live-view-enhancements.md  2026-02-15-cinematic-tv-animations-design.md  2026-02-28-deck-borrowing.md  (+14 more)
frontend/: Dockerfile  TAILWIND_MIGRATION_GUIDE.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+156 files in other folders)
