[project]
name = "mtgleaderboard"
version = "2.0.0"
description = "Pod Pal API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "beanie>=1.27.0",
    "motor>=3.6.0",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "authlib>=1.4.0",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.1.0",
    "logfire[fastapi]>=4.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.2",
]
